objects/CTSObjectTriggerMap__mdt.object
<CustomObject>
    <fields>
        <fullName>CTSAssignedToLoginName__c</fullName>
        <description>Login Name used to reference a CTS User</description>
        <inlineHelpText>Login Name used to reference a CTS User</inlineHelpText>
        <label>CTS Assigned To Login Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTSEmailAddress__c</fullName>
        <description>CTS Email Address referenced for CTS Ticket creation (if Email Integration Type)</description>
        <inlineHelpText>CTS Email Address referenced for CTS Ticket creation (if Email Integration Type)</inlineHelpText>
        <label>CTS Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTSNoteType__c</fullName>
        <description>CTS Note Type referenced for CTS Ticket creation (if API Integration Type)</description>
        <inlineHelpText>CTS Note Type referenced for CTS Ticket creation (if API Integration Type)</inlineHelpText>
        <label>CTS Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Note</fullName>
                    <default>true</default>
                    <label>Internal Note</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Any description, comments or notes about the mapping record</description>
        <inlineHelpText>Any description, comments or notes about the mapping record</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailsTemplateName__c</fullName>
        <description>Salesforce Email Template Name corresponding to the Details Template Id</description>
        <inlineHelpText>Salesforce Email Template Name corresponding to the Details Template Id</inlineHelpText>
        <label>Details Template Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationType__c</fullName>
        <description>Integration Type referenced for what process is used to create the CTS Ticket (Email or API)</description>
        <inlineHelpText>Integration Type referenced for what process is used to create the CTS Ticket (Email or API)</inlineHelpText>
        <label>Integration Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                    <default>true</default>
                    <label>API</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag/ indicator signifying if the mapping record is Active; integration code references only look for Active records as criteria</description>
        <inlineHelpText>Flag/ indicator signifying if the mapping record is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreateCTSNote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag/ Indicator signifying if an associated CTS Ticket Note should be created when creating the CTS Ticket (API Integration Type only)</description>
        <inlineHelpText>Flag/ Indicator signifying if an associated CTS Ticket Note should be created when creating the CTS Ticket (API Integration Type only)</inlineHelpText>
        <label>Is Create CTS Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoteDetailsTemplateName__c</fullName>
        <description>Salesforce Email Template Name corresponding to the Note Details Template Id</description>
        <inlineHelpText>Salesforce Email Template Name corresponding to the Note Details Template Id</inlineHelpText>
        <label>Note Details Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Filter__c</fullName>
        <description>Additional Filter placeholder</description>
        <inlineHelpText>Additional Filter placeholder</inlineHelpText>
        <label>Additional Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAutoClose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag/ Indicator signifying if the Salesforce record should be auto-closed</description>
        <inlineHelpText>Flag/ Indicator signifying if the Salesforce record should be auto-closed</inlineHelpText>
        <label>Is Auto Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExcludeWBN__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag/ indicator signifying that WBN records will be excluded from the specified mapping record processing</description>
        <inlineHelpText>Flag/ indicator signifying that WBN records will be excluded from the specified mapping record processing</inlineHelpText>
        <label>Is Exclude WBN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTSAPIIdentifier__c</fullName>
        <description>CTS API Identifier referenced for CTS Ticket creation (if API Integration Type)</description>
        <inlineHelpText>CTS API Identifier referenced for CTS Ticket creation (if API Integration Type)</inlineHelpText>
        <label>CTS API Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object Reference Metadata Type Lookup Relationship</description>
        <inlineHelpText>Object Reference Metadata Type Lookup Relationship</inlineHelpText>
        <label>Object Reference</label>
        <referenceTo>CTS_Salesforce_Object_Ref__mdt</referenceTo>
        <relationshipLabel>CTSObjectTriggerMaps</relationshipLabel>
        <relationshipName>CTSObjectTriggerMaps_SFDCObjectRef</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Name of the Salesforce Object Record Type referenced for CTS Ticket creation</description>
        <inlineHelpText>Name of the Salesforce Object Record Type referenced for CTS Ticket creation</inlineHelpText>
        <label>Record Type Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Update</fullName>
                    <default>true</default>
                    <label>Account Update</label>
                </value>
                <value>
                    <fullName>Charge Failure</fullName>
                </value>
                <value>
                    <fullName>Closing Script - Auto Launch</fullName>
                </value>
                <value>
                    <fullName>Installation Worksheet</fullName>
                </value>
                <value>
                    <fullName>LBW Content Organic Setup</fullName>
                </value>
                <value>
                    <fullName>LH Closing Script – Auto Launch</fullName>
                </value>
                <value>
                    <fullName>LH Master</fullName>
                </value>
                <value>
                    <fullName>LH OOS</fullName>
                </value>
                <value>
                    <fullName>Maps Initial Claiming</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>NCS - AutoLaunch</fullName>
                </value>
                <value>
                    <fullName>NPS Survey LBW</fullName>
                </value>
                <value>
                    <fullName>NPS Survey Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>Organic Setup</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>PIN Action Needed</fullName>
                </value>
                <value>
                    <fullName>QA Audit</fullName>
                </value>
                <value>
                    <fullName>TORCHx Master</fullName>
                </value>
                <value>
                    <fullName>TORCHx NCS - AutoLaunch</fullName>
                </value>
                <value>
                    <fullName>Yodle Gold Service</fullName>
                </value>
                <value>
                    <fullName>CATCHALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <description>Salesforce Case Origin referenced for CTS Ticket creation (if applicable)</description>
        <inlineHelpText>Salesforce Case Origin referenced for CTS Ticket creation (if applicable)</inlineHelpText>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Circuit Breaker</fullName>
                </value>
                <value>
                    <fullName>customercare@yodle.com</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>YodleGoldService@yodle.com</fullName>
                </value>
                <value>
                    <fullName>Touch Plan 1</fullName>
                </value>
                <value>
                    <fullName>Touch Plan 2</fullName>
                </value>
                <value>
                    <fullName>Touch Plan 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReason__c</fullName>
        <description>Salesforce Case Reason referenced for CTS Ticket creation (if applicable)</description>
        <inlineHelpText>Salesforce Case Reason referenced for CTS Ticket creation (if applicable)</inlineHelpText>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Adoption Call</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Charge Failure</fullName>
                </value>
                <value>
                    <fullName>Client Communication</fullName>
                </value>
                <value>
                    <fullName>Client Escalation</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>CS Touch Plan</fullName>
                </value>
                <value>
                    <fullName>Maps Verification</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Proactive Touch</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>New Client Setup</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Cancel Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>Salesforce Product Type referenced for CTS Ticket creation</description>
        <inlineHelpText>Salesforce Product Type referenced for CTS Ticket creation</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Essentials</fullName>
                </value>
                <value>
                    <fullName>Leads By Web</fullName>
                    <default>true</default>
                    <label>Leads By Web</label>
                </value>
                <value>
                    <fullName>Lead Stream ATV</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>TORCHx</fullName>
                </value>
                <value>
                    <fullName>TORCHx Ads</fullName>
                </value>
                <value>
                    <fullName>Yodle Ads</fullName>
                </value>
                <value>
                    <fullName>Yodle Max</fullName>
                </value>
                <value>
                    <fullName>Yodle Organic</fullName>
                </value>
                <value>
                    <fullName>Yodle Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used as reference to determine how a CTS Ticket should be created, what data elements should be included and the source of the ticket data from Salesforce data</description>
    <label>CTSObjectTriggerMap</label>
    <pluralLabel>CTSObjectTriggerMaps</pluralLabel>
    <listViews>
        <fullName>All_Triggers</fullName>
        <columns>Object__c</columns>
        <columns>RecordTypeName__c</columns>
        <columns>ProductType__c</columns>
        <columns>CaseReason__c</columns>
        <columns>CaseOrigin__c</columns>
        <columns>CTSAPIIdentifier__c</columns>
        <columns>DetailsTemplateName__c</columns>
        <columns>MasterLabel</columns>
        <columns>IntegrationType__c</columns>
        <columns>CTSEmailAddress__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Triggers</label>
    </listViews>
</CustomObject>